@@ -148,166 +148,6 @@ def standard_deviation(r, sample=True):
         normal_denom=len(r)
     return (sdsq / normal_denom) ** 0.5
 
-class SimpleStats(object):
-    """Calculate a few simple statistics on data.
-    
-    This class calculates the minimum, maximum, and count of all the values
-    given to it.  The values are not saved in the object.  Usage::
-
-        >>> stats = SimpleStats()
-        >>> stats(2)               # Add one data value.
-        >>> stats.extend([6, 4])   # Add several data values at once.  
-
-    The statistics are available as instance attributes::
-
-        >>> stats.count
-        3
-        >>> stats.min
-        2
-        >>> stats.max
-        6
-
-    Non-numeric data is also allowed:
-
-    >>> stats2 = SimpleStats()
-    >>> stats2("foo")
-    >>> stats2("bar")
-    >>> stats2.count
-    2
-    >>> stats2.min
-    'bar'
-    >>> stats2.max
-    'foo'
-
-    ``.min`` and ``.max`` are ``None`` until the first data value is
-    registered.
-
-    Subclasses can override ``._init_stats`` and ``._update_stats`` to add
-    additional statistics. 
-    
-    The constructor accepts one optional argument, ``numeric``. If true, the
-    instance accepts only values that are ``int``, ``long``, or ``float``.
-    The default is false, which accepts any value. This is meant for instances
-    or subclasses that don't want non-numeric values.
-    """
-    __version__ = 1
-
-    def __init__(self, numeric=False):
-        self.numeric = numeric
-        self.count = 0
-        self.min = None
-        self.max = None
-        self._init_stats()
-        
-    def __nonzero__(self):
-        """The instance is true if it has seen any data."""
-        return bool(self.count)
-
-    def __call__(self, value):
-        """Add a data value."""
-        if self.numeric:
-            value + 0   # Raises TypeError if value is not numeric.
-        if self.count == 0:
-            self.min = self.max = value
-        else:
-            self.min = min(self.min, value)
-            self.max = max(self.max, value)
-        self.count += 1
-        self._update_stats(value)
-
-    def extend(self, values):
-        """Add several data values at once, akin to ``list.extend``."""
-        for value in values:
-            self(value)
-
-    ### Hooks for subclasses
-    def _init_stats(self):
-        """Initialize state data used by subclass statistics."""
-        pass
-
-    def _update_stats(self, value):
-        """Add a value to the subclass statistics."""
-        pass
-
-
-class Stats(SimpleStats):
-    """A container for data and statistics.
-
-    This class extends ``SimpleStats`` by calculating additional statistics,
-    and by storing all data seen.  All values must be numeric (``int``,
-    ``long``, and/or ``float``), and you must call ``.finish()`` to generate
-    the additional statistics.  That's because the statistics here cannot be
-    calculated incrementally, but only after all data is known.
-
-    
-    >>> stats = Stats()
-    >>> stats.extend([5, 10, 10])
-    >>> stats.count
-    3
-    >>> stats.finish()
-    >>> stats.mean # doctest: +ELLIPSIS
-    8.33333333333333...
-    >>> stats.median
-    10
-    >>> stats.standard_deviation
-    2.8867513459481287
-
-    All data is stored in a list and a set for later use::
-
-        >>> stats.list
-        [5, 10, 10]
-
-        >>  stats.set
-        set([5, 10])
-
-    (The double prompt ">>" is used to hide the example from doctest.)
-
-    The stat attributes are ``None`` until you call ``.finish()``.  It's
-    permissible -- though not recommended -- to add data after calling
-    ``.finish()`` and then call ``.finish()`` again.  This recalculates the
-    stats over the entire data set.
-
-    In addition to the hook methods provided by ``SimpleStats``, subclasses
-    can override ``._finish-stats`` to provide additional statistics.
-    """
-    __version__ = 1
-
-    def __init__(self):
-        SimpleStats.__init__(self, numeric=True)
-        self.list = []
-        self.set = set()
-        self.mean = None
-        self.median = None
-        self.standard_deviation = None
-        self._init_stats()
-
-    def __call__(self, value):
-        """Add a data value."""
-        if self.count == 0:
-            self.min = self.max = value
-        else:
-            self.min = min(self.min, value)
-            self.max = max(self.max, value)
-        self.count += 1
-        self._update_stats(value)
-        self.list.append(value)
-        self.set.add(value)
-
-    def finish(self):
-        """Finish calculations. (Call after adding all data values.)
-        
-        Call this after adding all data values, or the results will be
-        incomplete.
-        """
-        self.mean = mean(self.list)
-        self.median = median(self.list)
-        self.standard_deviation = standard_deviation(self.list)
-        self._finish_stats()
-
-    ### Hooks for subclasses.
-    def _finish_stats(self):
-        """Finish the subclass statistics now that all data are known."""
-        pass
 
 #### Number formatting ####
 
